# audio-looper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/audioloop/: __init__.py  __main__.py  analysis.py  batch.py  cli.py  config.py  crossfade.py  duration.py  exceptions.py  io.py  looper.py  models.py  reporting.py
tests/: conftest.py
tests/unit/: __init__.py  test_analysis.py  test_batch.py  test_cli.py  test_crossfade.py  test_duration.py  test_io.py  test_looper.py  test_reporting.py
