[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audioloop"
version = "0.3.1"
description = "Auto-detect and create seamless audio loops from WAV files"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "scipy>=1.12",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
audioloop = "audioloop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audioloop"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.mypy]
python_version = "3.12"
strict = true
